...
    PostCategory.personalItems => 'Personal Items',
    PostCategory.pets => 'Pets',
  };
}

class Post {
  Post({
    required this.id,
    required this.type,
    required this.category,
    required this.itemName,
    this.description,
    required this.street,
...
